# sev

./: .gitignore  build.sh  buildc.sh  buildc_xcode.sh
src/: CMakeLists.txt
src/SEVLibrary/: CMakeLists.txt
src/SEVLibrary/include/sev/: shell.h  tokenizer.h
src/SEVLibrary/src/: commands.c  shell.c  tokenizer.c
src/SEVLibrary/test/: test.cpp  test_commands.h  test_shell.h  test_tokenizer.h
src/svLibrary/: CMakeLists.txt
src/svLibrary/include/sv/: Asserts.h  ClientVariables.h  Common.h  Engine.h  Globals.h  Log.h  Precision.h  ProgramOptions.h  Singleton.h  System.h
src/svLibrary/include/sv/client/: Client.h
src/svLibrary/include/sv/console/: Commands.h  Console.h  ConsoleCommands.h  Shell.h  Tokenizer.h
src/svLibrary/include/sv/input/: Input.h
src/svLibrary/include/sv/network/: Connection.h  Sockets.h
src/svLibrary/include/sv/platform/: Keycodes.h  Platform.h  SDL2Platform.h
src/svLibrary/include/sv/resource/: ConfigResourceLoader.h  DateTime.h  Resource.h  ResourceCache.h  ResourceCollection.h  ResourceFolderPC.h
src/svLibrary/include/sv/script/: LuaScript.h  Script.h  ScriptInterface.h
src/svLibrary/src/: Asserts.cpp  ClientVariables.cpp  Common.cpp  Engine.cpp  Globals.cpp  Log.cpp  ProgramOptions.cpp
src/svLibrary/src/client/: Client.cpp
src/svLibrary/src/console/: Commands.c  Console.cpp  ConsoleCommands.cpp  Shell.c  Tokenizer.c
src/svLibrary/src/input/: Input.cpp
src/svLibrary/src/network/: Connection.cpp  Sockets.cpp
src/svLibrary/src/platform/: Keycodes.cpp  Platform.cpp  SDL2Platform.cpp
src/svLibrary/src/resource/: ConfigResourceLoader.cpp  DateTime.cpp  Resource.cpp  ResourceCache.cpp  ResourceFolderPC.cpp
src/svLibrary/src/script/: LuaScript.cpp  ScriptInterface.cpp
src/svLibrary/test/: test.cpp  test_client.h  test_clientvariables.h  test_commands.h  test_common.h  test_connection.h  test_console.h  test_datetime.h  test_engine.h  test_input.h  test_keycodes.h  test_log.h  test_programoptions.h  test_resourcecache.h  test_resourcefolderpc.h  test_scriptinterface.h  test_sdl2platform.h  test_shell.h  test_sockets.h  test_tokenizer.h
